--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "client": "cd client && npm start",
-    "server": "nodemon server.js",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "postinstall": "npm install --prefix polling-app && npm run build --prefix polling-app"
   },
   "keywords": ["polling", "socket.io", "react", "express"],
   "author": "Your Name",
@@ -22,5 +19,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
